update: add: MySql db integration with typeorm, dto, docker config TypeORM for interaction with the Database. DTO to enhances data encapsulation, flexibility and maintainability. docker compose configuration to keep sentitive data safe and a init.sql file to create tables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,23 @@ services:
     environment:
       NODE_ENV: development
       DATABASE_HOST: db
-      DATABASE_USER: root
-      DATABASE_PASSWORD: secret
+      DATABASE_USER: ${DB_USER}
+      DATABASE_PASSWORD: ${DB_PASSWORD}
       DATABASE_NAME: test_db
 
   db:
     image: mysql:8.0
     container_name: mysql_db
     environment: 
-      MYSQL_ROOT_PASSWORD: secrert
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: test_db 
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
       - "3306:3306"
+    volumes:
+      - ./mysql-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - mysql-data:/var/lib/mysql
 volumes:
   pnpm-store:
+  mysql-data:
